--- a/styles/globals.css
+++ b/styles/globals.css
@@ -599,6 +599,35 @@ margin-top: 160px;
   font-weight: 600;
   text-align: center;
 }
+.cancel, .cancel{
+  width: 1000px;
+margin: auto;
+margin-top: 160px;
+  background-color: #dcdcdc;
+  padding: 50px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.cancel .icon {
+   color: red;
+   font-size: 40px;
+}
+.cancel h2{
+  text-transform: capitalize;
+  margin-top: 15px 0px;
+  font-weight: 900;
+  font-size: 40px;
+  color:#324d67;
+}
+.cancel .email-msg{
+   font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+}
 .cancel p{
   font-size: 20px;
   font-weight: 600;
