--- a/styles/globals.css
+++ b/styles/globals.css
@@ -632,6 +632,17 @@ margin-top: 160px;
   font-size: 20px;
   font-weight: 600;
 }
+.cancel .description{
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  margin: 10px;
+  margin-top: 30px;
+}
+.cancel .description .email{
+  margin-left: 5px;
+  color: #f02d34;
+}
 .success .description{
   font-size: 16px;
   font-weight: 600;
